--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "formik": "^2.2.0",
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "yup": "^0.29.3"
   }
 }
